# spok

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test_main.yml  test_pull_requests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
space/: __init__.py  smath.py  utils.py
space/analysis/: mva.py
space/coordinates/: coordinates.py
space/models/: magnetospheric.py  planetary.py
space/plot/: planet_env.py
spok/: __init__.py  utils.py
spok/coordinates/: coordinates.py
spok/plot/: planet_env.py
tests/: __init__.py  test_space.py  test_spok.py
